removed overflow-x from body. Needs additional fix.

--- a/style/2-base/_global.scss
+++ b/style/2-base/_global.scss
@@ -1,7 +1,7 @@
 //Everything will be using border-box to make calculations easier.
 body, *, :root {
     box-sizing: border-box;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 
