--- a/style/masterstyle.css
+++ b/style/masterstyle.css
@@ -128,7 +128,6 @@ a {
 
 body, *, :root {
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 :root {
